--- a/learnwords/Base.lproj/Main.storyboard
+++ b/learnwords/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="learnwords" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gYc-Rx-Ofx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puY-XI-HpE">
-                                <rect key="frame" x="37" y="65" width="301" height="45"/>
+                                <rect key="frame" x="37" y="75" width="340" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="mCM-CE-aiS"/>
                                 </constraints>
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="znx-Ix-TJa">
-                                <rect key="frame" x="37" y="118" width="301" height="45"/>
+                                <rect key="frame" x="37" y="128" width="340" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="qga-px-aI6"/>
                                 </constraints>
@@ -37,7 +37,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ewl-e9-mj8">
-                                <rect key="frame" x="0.0" y="622" width="375" height="45"/>
+                                <rect key="frame" x="0.0" y="691" width="414" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="a6s-el-7HM"/>
                                 </constraints>
@@ -48,7 +48,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DtC-kp-pi0">
-                                <rect key="frame" x="0.0" y="577" width="375" height="45"/>
+                                <rect key="frame" x="0.0" y="646" width="414" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="Tqk-z0-vX7"/>
                                 </constraints>
@@ -59,16 +59,32 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Bdc-Y0-TXa"/>
                                 </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8t-H7-Na5">
+                                <rect key="frame" x="0.0" y="30" width="90" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="K8k-JZ-AGd"/>
+                                    <constraint firstAttribute="height" constant="45" id="ij4-LQ-BYp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Settings">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ali-ek-DVc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="puY-XI-HpE" firstAttribute="top" secondItem="cUG-WI-TIj" secondAttribute="top" constant="45" id="8iD-fS-R6K"/>
+                            <constraint firstItem="B8t-H7-Na5" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" id="2MH-Gu-Hds"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" id="95C-8w-1BX"/>
+                            <constraint firstItem="B8t-H7-Na5" firstAttribute="top" secondItem="cUG-WI-TIj" secondAttribute="top" constant="10" id="CSu-cd-bOd"/>
                             <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="znx-Ix-TJa" secondAttribute="trailing" constant="37" id="EOD-VM-CbE"/>
                             <constraint firstItem="znx-Ix-TJa" firstAttribute="top" secondItem="puY-XI-HpE" secondAttribute="bottom" constant="8" id="FKu-AM-ifc"/>
                             <constraint firstItem="puY-XI-HpE" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" constant="37" id="NGc-37-18S"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="top" secondItem="DtC-kp-pi0" secondAttribute="bottom" id="Plr-2K-aPg"/>
+                            <constraint firstItem="puY-XI-HpE" firstAttribute="top" secondItem="B8t-H7-Na5" secondAttribute="bottom" id="Rf2-E4-3fr"/>
                             <constraint firstItem="znx-Ix-TJa" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" constant="37" id="V8m-hl-Dow"/>
                             <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="puY-XI-HpE" secondAttribute="trailing" constant="37" id="Zfd-gG-iM6"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="trailing" secondItem="cUG-WI-TIj" secondAttribute="trailing" id="krx-Eu-yoG"/>
@@ -84,6 +100,7 @@
                     <connections>
                         <outlet property="checkButton" destination="Ewl-e9-mj8" id="GY6-IA-McW"/>
                         <outlet property="optionalWordLabel" destination="znx-Ix-TJa" id="bf5-dX-5hv"/>
+                        <outlet property="settingsButton" destination="B8t-H7-Na5" id="tec-0J-gcj"/>
                         <outlet property="textField" destination="DtC-kp-pi0" id="iW2-6U-shd"/>
                         <outlet property="wordLabel" destination="puY-XI-HpE" id="Zi9-te-6cp"/>
                     </connections>
@@ -101,9 +118,9 @@
         <!--Settings View Controller-->
         <scene sceneID="yGh-tg-h2z">
             <objects>
-                <viewController id="t7B-Qy-Z78" customClass="SettingsViewController" customModule="learnwords" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="settings" id="t7B-Qy-Z78" customClass="SettingsViewController" customModule="learnwords" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BPL-yn-8b5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="HoO-LK-6cJ"/>
@@ -112,6 +129,83 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5w-8g-o8S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="964" y="30"/>
+        </scene>
+        <!--New Word View Controller-->
+        <scene sceneID="v6S-uM-VzB">
+            <objects>
+                <viewController storyboardIdentifier="newWord" id="6Ea-pQ-DDI" customClass="NewWordViewController" customModule="learnwords" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MtP-qy-bTz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GaF-3z-5Up">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="w2V-gr-rdj" customClass="NewWordCell" customModule="learnwords" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w2V-gr-rdj" id="EL8-Gc-7In">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="default" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5H-o7-xEB">
+                                                    <rect key="frame" x="10" y="5" width="100" height="33"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="MSu-Rt-lPl"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ogm-RB-KY7">
+                                                    <rect key="frame" x="379" y="5" width="25" height="33.666666666666664"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="ogm-RB-KY7" secondAttribute="trailing" constant="10" id="26K-fj-uQG"/>
+                                                <constraint firstAttribute="bottom" secondItem="ogm-RB-KY7" secondAttribute="bottom" constant="5" id="Eta-KH-mZB"/>
+                                                <constraint firstItem="ogm-RB-KY7" firstAttribute="leading" secondItem="G5H-o7-xEB" secondAttribute="trailing" constant="269" id="K9T-AB-H5q"/>
+                                                <constraint firstAttribute="bottom" secondItem="G5H-o7-xEB" secondAttribute="bottom" constant="5" id="MKb-Dl-9rV"/>
+                                                <constraint firstItem="G5H-o7-xEB" firstAttribute="top" secondItem="EL8-Gc-7In" secondAttribute="top" constant="5" id="SyC-TO-Z3f"/>
+                                                <constraint firstItem="ogm-RB-KY7" firstAttribute="top" secondItem="EL8-Gc-7In" secondAttribute="top" constant="5" id="cQG-b8-Dqg"/>
+                                                <constraint firstItem="G5H-o7-xEB" firstAttribute="leading" secondItem="EL8-Gc-7In" secondAttribute="leading" constant="10" id="hxK-ak-r55"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="G5H-o7-xEB" id="5lU-3m-XLz"/>
+                                            <outlet property="valueField" destination="ogm-RB-KY7" id="l1U-EF-NPO"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6Ea-pQ-DDI" id="h0W-Xh-fnM"/>
+                                    <outlet property="delegate" destination="6Ea-pQ-DDI" id="FEZ-4V-KfV"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jEh-mk-yWy" firstAttribute="trailing" secondItem="GaF-3z-5Up" secondAttribute="trailing" id="EYv-UG-xKc"/>
+                            <constraint firstItem="jEh-mk-yWy" firstAttribute="bottom" secondItem="GaF-3z-5Up" secondAttribute="bottom" id="Jis-gV-EP1"/>
+                            <constraint firstItem="GaF-3z-5Up" firstAttribute="top" secondItem="jEh-mk-yWy" secondAttribute="top" id="brH-sw-qKW"/>
+                            <constraint firstItem="GaF-3z-5Up" firstAttribute="leading" secondItem="jEh-mk-yWy" secondAttribute="leading" id="w7s-kk-bmM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jEh-mk-yWy"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="GaF-3z-5Up" id="j60-SH-gsT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TVX-3P-f9T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1721.7391304347827" y="35.869565217391305"/>
         </scene>
     </scenes>
 </document>
