--- a/learnwords/Base.lproj/Main.storyboard
+++ b/learnwords/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -139,27 +139,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GaF-3z-5Up">
-                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <rect key="frame" x="0.0" y="50" width="414" height="686"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="w2V-gr-rdj" customClass="NewWordCell" customModule="learnwords" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewWordCell" rowHeight="60" id="w2V-gr-rdj" customClass="NewWordCell" customModule="learnwords" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w2V-gr-rdj" id="EL8-Gc-7In">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="59.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="default" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5H-o7-xEB">
-                                                    <rect key="frame" x="10" y="5" width="100" height="33"/>
+                                                    <rect key="frame" x="10" y="5" width="100" height="49.666666666666664"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="100" id="MSu-Rt-lPl"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="dic-yL-Ubd"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ogm-RB-KY7">
-                                                    <rect key="frame" x="379" y="5" width="25" height="33.666666666666664"/>
+                                                    <rect key="frame" x="120" y="5" width="284" height="49.666666666666664"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -167,9 +167,10 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="ogm-RB-KY7" secondAttribute="trailing" constant="10" id="26K-fj-uQG"/>
+                                                <constraint firstItem="ogm-RB-KY7" firstAttribute="leading" secondItem="G5H-o7-xEB" secondAttribute="trailing" constant="10" id="5OQ-c8-Tvd"/>
                                                 <constraint firstAttribute="bottom" secondItem="ogm-RB-KY7" secondAttribute="bottom" constant="5" id="Eta-KH-mZB"/>
-                                                <constraint firstItem="ogm-RB-KY7" firstAttribute="leading" secondItem="G5H-o7-xEB" secondAttribute="trailing" constant="269" id="K9T-AB-H5q"/>
                                                 <constraint firstAttribute="bottom" secondItem="G5H-o7-xEB" secondAttribute="bottom" constant="5" id="MKb-Dl-9rV"/>
+                                                <constraint firstAttribute="trailing" secondItem="ogm-RB-KY7" secondAttribute="trailing" constant="10" id="S4e-iG-y3q"/>
                                                 <constraint firstItem="G5H-o7-xEB" firstAttribute="top" secondItem="EL8-Gc-7In" secondAttribute="top" constant="5" id="SyC-TO-Z3f"/>
                                                 <constraint firstItem="ogm-RB-KY7" firstAttribute="top" secondItem="EL8-Gc-7In" secondAttribute="top" constant="5" id="cQG-b8-Dqg"/>
                                                 <constraint firstItem="G5H-o7-xEB" firstAttribute="leading" secondItem="EL8-Gc-7In" secondAttribute="leading" constant="10" id="hxK-ak-r55"/>
@@ -194,7 +195,7 @@
                         <constraints>
                             <constraint firstItem="jEh-mk-yWy" firstAttribute="trailing" secondItem="GaF-3z-5Up" secondAttribute="trailing" id="EYv-UG-xKc"/>
                             <constraint firstItem="jEh-mk-yWy" firstAttribute="bottom" secondItem="GaF-3z-5Up" secondAttribute="bottom" id="Jis-gV-EP1"/>
-                            <constraint firstItem="GaF-3z-5Up" firstAttribute="top" secondItem="jEh-mk-yWy" secondAttribute="top" id="brH-sw-qKW"/>
+                            <constraint firstItem="GaF-3z-5Up" firstAttribute="top" secondItem="jEh-mk-yWy" secondAttribute="top" constant="30" id="NO5-z7-3O3"/>
                             <constraint firstItem="GaF-3z-5Up" firstAttribute="leading" secondItem="jEh-mk-yWy" secondAttribute="leading" id="w7s-kk-bmM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jEh-mk-yWy"/>
