--- a/learnwords/Resources/Base.lproj/Main.storyboard
+++ b/learnwords/Resources/Base.lproj/Main.storyboard
@@ -85,10 +85,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5P-AN-71M" userLabel="card">
-                                <rect key="frame" x="16" y="83" width="343" height="343"/>
+                                <rect key="frame" x="20" y="30" width="339" height="499"/>
                                 <subviews>
                                     <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCD-oH-kaY" userLabel="cardBackground">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="342" height="499"/>
                                         <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <gestureRecognizers/>
                                     </view>
@@ -101,7 +101,7 @@
                                         <color key="textColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="optional" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOW-Rq-Swv">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="optional" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOW-Rq-Swv">
                                         <rect key="frame" x="21" y="53" width="301" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="WOS-pM-smp"/>
@@ -115,10 +115,10 @@
                                 <constraints>
                                     <constraint firstItem="zhu-1p-TuY" firstAttribute="leading" secondItem="g5P-AN-71M" secondAttribute="leading" constant="21" id="7y8-L9-cWx"/>
                                     <constraint firstItem="SOW-Rq-Swv" firstAttribute="top" secondItem="zhu-1p-TuY" secondAttribute="bottom" constant="8" symbolic="YES" id="EFp-6E-5RO"/>
-                                    <constraint firstItem="FCD-oH-kaY" firstAttribute="centerX" secondItem="zhu-1p-TuY" secondAttribute="centerX" id="J8T-BD-L7N"/>
+                                    <constraint firstItem="FCD-oH-kaY" firstAttribute="centerX" secondItem="zhu-1p-TuY" secondAttribute="centerX" constant="-0.5" id="J8T-BD-L7N"/>
                                     <constraint firstItem="zhu-1p-TuY" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="top" id="R5b-qT-Vx9"/>
                                     <constraint firstItem="zhu-1p-TuY" firstAttribute="leading" secondItem="SOW-Rq-Swv" secondAttribute="leading" id="RH6-jg-D5G"/>
-                                    <constraint firstItem="zhu-1p-TuY" firstAttribute="centerX" secondItem="g5P-AN-71M" secondAttribute="centerX" id="Sfa-oY-nKd"/>
+                                    <constraint firstItem="zhu-1p-TuY" firstAttribute="centerX" secondItem="g5P-AN-71M" secondAttribute="centerX" constant="2" id="Sfa-oY-nKd"/>
                                     <constraint firstAttribute="bottom" secondItem="FCD-oH-kaY" secondAttribute="bottom" id="nze-KQ-4VY"/>
                                     <constraint firstItem="zhu-1p-TuY" firstAttribute="trailing" secondItem="SOW-Rq-Swv" secondAttribute="trailing" id="oom-AS-Hrf"/>
                                     <constraint firstItem="FCD-oH-kaY" firstAttribute="top" secondItem="zhu-1p-TuY" secondAttribute="top" id="tra-uM-AER"/>
@@ -135,10 +135,10 @@
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="leading" secondItem="Ewl-e9-mj8" secondAttribute="leading" id="1MG-Qf-Iak"/>
                             <constraint firstItem="A1a-5O-A1J" firstAttribute="leading" secondItem="nxp-Fj-zhb" secondAttribute="trailing" id="5ZC-Qw-p1j"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="leading" secondItem="DtC-kp-pi0" secondAttribute="leading" id="65C-DR-v1o"/>
-                            <constraint firstItem="g5P-AN-71M" firstAttribute="leading" secondItem="gYc-Rx-Ofx" secondAttribute="leadingMargin" id="6Br-4a-gzH"/>
+                            <constraint firstItem="g5P-AN-71M" firstAttribute="leading" secondItem="gYc-Rx-Ofx" secondAttribute="leadingMargin" constant="4" id="6Br-4a-gzH"/>
                             <constraint firstItem="nxp-Fj-zhb" firstAttribute="centerX" secondItem="DtC-kp-pi0" secondAttribute="centerX" id="7RJ-M1-Exh"/>
                             <constraint firstItem="A1a-5O-A1J" firstAttribute="trailing" secondItem="DtC-kp-pi0" secondAttribute="trailing" id="8Cu-Wn-Rmg"/>
-                            <constraint firstItem="lqz-Ni-zRL" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="111" id="CNJ-eK-2jV"/>
+                            <constraint firstItem="lqz-Ni-zRL" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="8" id="CNJ-eK-2jV"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="firstBaseline" secondItem="A1a-5O-A1J" secondAttribute="firstBaseline" id="IeY-UQ-b1x"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="bottom" secondItem="nxp-Fj-zhb" secondAttribute="bottom" id="LzQ-xN-lba"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="trailing" secondItem="Ewl-e9-mj8" secondAttribute="trailing" id="aO7-om-KjU"/>
@@ -147,9 +147,9 @@
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="top" secondItem="nxp-Fj-zhb" secondAttribute="top" id="fyn-cD-ict"/>
                             <constraint firstItem="B8t-H7-Na5" firstAttribute="top" secondItem="cUG-WI-TIj" secondAttribute="top" constant="10" id="gI6-L7-reb"/>
                             <constraint firstItem="lqz-Ni-zRL" firstAttribute="baseline" secondItem="A1a-5O-A1J" secondAttribute="baseline" id="hbe-3l-t9f"/>
-                            <constraint firstItem="g5P-AN-71M" firstAttribute="top" secondItem="B8t-H7-Na5" secondAttribute="bottom" constant="8" symbolic="YES" id="ibA-ZQ-pnZ"/>
+                            <constraint firstItem="g5P-AN-71M" firstAttribute="top" secondItem="B8t-H7-Na5" secondAttribute="bottom" constant="-45" id="ibA-ZQ-pnZ"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="bottom" secondItem="cUG-WI-TIj" secondAttribute="bottom" id="kNw-en-phG"/>
-                            <constraint firstItem="g5P-AN-71M" firstAttribute="centerX" secondItem="nxp-Fj-zhb" secondAttribute="centerX" id="pTA-I1-qHz"/>
+                            <constraint firstItem="g5P-AN-71M" firstAttribute="centerX" secondItem="nxp-Fj-zhb" secondAttribute="centerX" constant="2" id="pTA-I1-qHz"/>
                             <constraint firstItem="B8t-H7-Na5" firstAttribute="leading" secondItem="lqz-Ni-zRL" secondAttribute="leading" id="pj3-9a-NQn"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="top" secondItem="DtC-kp-pi0" secondAttribute="bottom" id="tfJ-nB-4wn"/>
                             <constraint firstItem="Ewl-e9-mj8" firstAttribute="top" secondItem="lqz-Ni-zRL" secondAttribute="bottom" constant="40" id="ttQ-ms-RdL"/>
@@ -176,7 +176,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="23.199999999999999" y="29.23538230884558"/>
+            <point key="canvasLocation" x="21.600000000000001" y="28.335832083958024"/>
         </scene>
         <!--Help Popover View Controller-->
         <scene sceneID="KN3-0b-H9B">
@@ -225,7 +225,7 @@
                                 <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewWordCell" rowHeight="60" id="w2V-gr-rdj" customClass="NewWordCell" customModule="learnwords" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewWordCell" rowHeight="60" id="w2V-gr-rdj" customClass="NewWordCell" customModule="learnwords" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w2V-gr-rdj" id="EL8-Gc-7In">
